bookings-list-bff/bookings-list-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
  labels:
    app: bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff
        image: marksantosiress/bookinglist_bff:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff
  type: NodePort
  ports:
  - name:  bff-service
    port: 80
    targetPort: 80
    nodePort: 30031
    protocol: TCP
