bookings-list-bff/bookings-list-bff-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/bookings(/|$)(.*)"
        backend:
          service:
            name: bff-service
            port:
              number: 80
